# resize

./: CMakeLists.txt  LICENSE.md  README.md
include/: helper.hpp  main.hpp
src/: helper.cpp  main.cpp
